--- a/DataGridView/DataGridView.vbproj
+++ b/DataGridView/DataGridView.vbproj
@@ -91,6 +91,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="MyDataGridViewCell.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Form1.resx">
